@startuml
title Shopping Cart System - Class Diagram

skinparam classAttributeIconSize 0

package com.example.shopping {
    class Product {
        - id: int
        - name: String
        - price: double
        - stock: int
        + Product(id: int, name: String, price: double, stock: int)
        + getId(): int
        + getName(): String
        + getPrice(): double
        + getStock(): int
        + setPrice(price: double): void
        + reduceStock(amount: int): void
        + increaseStock(amount: int): void
    }

    class ShoppingCart {
        - items: Map<Product, Integer>
        + addItem(product: Product, quantity: int): void
        + removeItem(product: Product, quantity: int): void
        + getTotalPrice(): double
        + isEmpty(): boolean
        + getItems(): Map<Product, Integer>
        + clear(): void
    }

    class OrderCalculator <<utility>> {
        + {static} calculate(subtotal: double, discountPercent: double, taxPercent: double): double
    }

    ShoppingCart "1" o-- "0..*" Product : reserves
    OrderCalculator ..> ShoppingCart : accepts subtotal from
}
@enduml
